error handling on form submit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div>
       <label for="story-url">url</label>
-      <input id ="story-url" type ="text" placeholder="story url" required>
+      <input id ="story-url" type ="text" placeholder="story url (https://)" required>
     </div>
     <button type="submit">submit</button>
     <hr>
